--- a/index.html
+++ b/index.html
@@ -4,15 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="dark light" />
     <title>Сложно сосредоточиться</title>
+    <link rel="icon" href="./images/favicon.ico" />
+    <link rel="stylesheet" href="./styles/globals.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/variables.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/dark.css" />
+    <link rel="stylesheet" href="./styles/light.css" />
     <script src="./scripts/script.js"></script>
   </head>
   <body class="page">
-    <header class="header decorated-zone">
+    <header class="header">
+      <div class="rec__element">REC</div>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
-            <button
+            <!-- <button
               class="header__theme-menu-button header__theme-menu-button_type_light"
             >
               День
@@ -31,10 +40,246 @@
               class="header__theme-menu-button header__theme-menu-button_type_dark"
             >
               Неон
-            </button>
+            </button> -->
+            <input
+              type="radio"
+              id="theme-light"
+              name="theme"
+              class="theme-input"
+              tabindex="0"
+            />
+            <label
+              for="theme-light"
+              class="header__theme-menu-button header__theme-menu-button_type_light"
+            >
+              День
+            </label>
+          </li>
+          <li class="header__theme-menu-item">
+            <input
+              type="radio"
+              id="theme-auto"
+              name="theme"
+              class="theme-input"
+              tabindex="0"
+            />
+            <label
+              for="theme-auto"
+              class="header__theme-menu-button header__theme-menu-button_type_auto"
+            >
+              Авто
+            </label>
+          </li>
+          <li class="header__theme-menu-item">
+            <input
+              type="radio"
+              id="theme-dark"
+              name="theme"
+              class="theme-input"
+              tabindex="0"
+              checked
+            />
+            <label
+              for="theme-dark"
+              class="header__theme-menu-button header__theme-menu-button_type_dark"
+            >
+              Неон
+            </label>
           </li>
         </ul>
       </nav>
+      <section class="main__title__section">
+        <div class="main__title__text">
+          <h1 class="main__title">no focus</h1>
+          <p class="main__description title-decor">
+            Что делать, когда не можешь делать ничего <br />Или почему нам так
+            сложно сконцентрироваться, особенно когда очень надо
+          </p>
+        </div>
+      </section>
     </header>
+    <main>
+      <section class="main__section">
+        <article class="main__article__card">
+          <h3 class="article__question__title">
+            Почему сосредоточиться так сложно
+          </h3>
+          <div class="article__content">
+            <h3 class="article__title title-decor">Многозадачность</h3>
+            <p class="article__description">
+              Особенно сложно сосредоточиться, когда задач много и все они —
+              важные. Где же легендарная многозадачность, когда она так нужна
+              вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
+              её просто не существует. Исследователи
+              <a class="accent__word" href="#">выяснили</a>, что мозгу тяжело
+              концентрироваться даже на двух делах одновременно. А когда в поле
+              внимания попадает несколько важных задач, организм паникует и
+              выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
+              работаем невнимательно: ошибаемся и быстро устаём.
+            </p>
+          </div>
+          <div class="article__content">
+            <h3 class="article__title title-decor">Дофамин</h3>
+            <p class="article__description">
+              С гормонами стресса всё понятно, но дальше — ещё интереснее. В
+              нашей невозможности сосредоточиться замешана и полная
+              противоположность стрессу — дофамин. Это вещество участвует в
+              системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся
+              от важной задачи на что-то более «приятное» для мозгов. Например,
+              смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы
+              чувствуем удовольствие. Получается замкнутый круг: чем больше
+              отвлекаешься, тем больше удовольствия получаешь.
+            </p>
+          </div>
+        </article>
+        <article class="main__article__card article__medium__card">
+          <h3 class="article__question__title">
+            Что снижает концентрацию внимания?
+          </h3>
+          <div class="article__content">
+            <h3 class="article__title title-decor">Многозадачность</h3>
+            <p class="article__description">
+              Как концентрация может снижаться из-за… концентрации? Любая
+              стрессовая ситуация (и резко меняющийся мир в целом) заставляет
+              наш мозг постоянно «сканировать» окружающую среду на предмет
+              опасности. Например, читать новости вместо работы. Но быть
+              собранными всё время — невозможно. Концентрация — мышца, и она
+              может не выдержать, если не давать ей отдохнуть.
+            </p>
+          </div>
+          <div class="article__content">
+            <h3 class="article__title title-decor">Еда</h3>
+            <p class="article__description">
+              «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+              доставляют в мозг энергию и помогают ему лучше работать. Но уходит
+              эта энергия также быстро, как и приходит. А мы в результате
+              попадаем на «углеводные качели»: как только действие «быстрых
+              углеводов» заканчивается, мы чувствуем усталость и сонливость. И
+              хотим ещё больше быстрых углеводов.
+            </p>
+          </div>
+          <div class="article__content">
+            <h3 class="article__title title-decor">Гаджеты</h3>
+            <p class="article__description">
+              Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+              наушниках — подкаст, а на компьютере фоном — ещё и видео с
+              забавными утятами. В результате мозг пытается переключиться с
+              одной задачи на другую — и просто не может. А чтобы вернуться к
+              состоянию полной концентрации, человеку в среднем нужно 20 минут.
+              Вот и получается, что чем больше времени мы проводим в гаджетах,
+              тем больше времени затем нужно, чтобы вернуться к работе.
+            </p>
+          </div>
+        </article>
+        <article class="main__article__card">
+          <h3 class="article__question__title">
+            Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
+            секунд)
+          </h3>
+          <div class="article__content">
+            <h3 class="article__pre-title title-decor">
+              <!-- article__title  -->
+              5 простых (на самом деле не очень) советов
+            </h3>
+            <h3 class="article__advise__title title-decor">
+              Представьте небо и облака
+            </h3>
+            <p class="article__description">
+              Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
+              успокоиться. Ведь часто именно тревожные мысли о сложных задачах
+              как раз и мешают эти сложные задачи делать. В такие моменты можно
+              закрыть глаза и представить, что чистое небо — это вы, а облака —
+              тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
+              где-то там, за тучами, и никуда не денется. Это упражнение поможет
+              вернуться в настоящий момент, а не волноваться о потенциальных
+              проблемах из будущего.
+            </p>
+          </div>
+          <div class="article__content">
+            <h3 class="article__advise__title title-decor">Включите музыку</h3>
+            <p class="article__description">
+              Но не любую, и не любимую. Любимая может быть связана с сильными
+              положительными эмоциями, которые тоже очень сильно отвлекают.
+              Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+              попробовать включить плейлист с «белым шумом» или нейромузыкой.
+            </p>
+          </div>
+          <div class="article__content">
+            <h3 class="article__advise__title title-decor">Прогуляйтесь</h3>
+            <p class="article__description">
+              Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+              <a class="accent__word" href="#">показал</a>, что созерцание
+              природы повышает концентрацию, в то время как после просмотра
+              городских пейзажей она наоборот понижается. Можно совместить
+              прогулку с физическими упражнениями или бегом — так в мозг
+              поступит ещё больше кислорода и он будет лучше работать. Но и
+              простая двадцатиминутная прогулка — тоже отличный вариант.
+            </p>
+          </div>
+          <div class="article__content">
+            <h3 class="article__advise__title title-decor">Хорошо ешьте</h3>
+            <p class="article__description">
+              Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+              которые препятствуют резким скачкам сахара в крови. Например, с
+              высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+              чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+            </p>
+          </div>
+          <div class="article__content">
+            <h3 class="article__advise__title title-decor">Читайте</h3>
+            <p class="article__description">
+              Настоящие бумажные книги. Это правда помогает с концентрацией:
+              чтобы прочитать пост в соцсети, достаточно нескольких минут или
+              даже секунд. А вот интересная книга способна затянуть и на
+              несколько часов и круто тренирует направленное внимание.
+            </p>
+          </div>
+        </article>
+      </section>
+      <section class="main__picture__section">
+        <div class="main__card__title">
+          <h3 class="main__card__title__text title-decor">
+            А можно в картинках?
+          </h3>
+        </div>
+        <div class="main__pictures">
+          <img
+            class="main__picture"
+            src="./images/sunset.png"
+            alt="изображение заката"
+            loading="lazy"
+          />
+          <img
+            class="main__picture"
+            src="./images/ice-cream.png"
+            alt="изображение мороженого"
+            loading="lazy"
+          />
+          <img
+            class="main__picture"
+            src="./images/tape.png"
+            alt="изображение пленки"
+            loading="lazy"
+          />
+          <img
+            class="main__picture"
+            src="./images/books.png"
+            alt="изображение книги"
+            loading="lazy"
+          />
+          <img
+            class="main__picture"
+            src="./images/street.png"
+            alt="изображение улицы"
+            loading="lazy"
+          />
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer__text">
+        <h2 class="main__title">focus</h2>
+      </div>
+    </footer>
   </body>
 </html>
