--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
               id="theme-light"
               name="theme"
               class="theme-input"
-              tabindex="0"
             />
             <label
               for="theme-light"
@@ -61,7 +60,7 @@
               id="theme-auto"
               name="theme"
               class="theme-input"
-              tabindex="0"
+              checked
             />
             <label
               for="theme-auto"
@@ -76,7 +75,6 @@
               id="theme-dark"
               name="theme"
               class="theme-input"
-              tabindex="0"
               checked
             />
             <label
