--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="./scripts/script.js"></script>
   </head>
   <body class="page">
+    <div class="page__content">
     <header class="header">
       <div class="rec__element">REC</div>
       <nav class="header__theme-menu">
@@ -278,5 +279,6 @@
         <h2 class="main__title">focus</h2>
       </div>
     </footer>
+  </div>
   </body>
 </html>
