--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <main>
       <section class="main__section">
         <section class="main__article__card">
-          <h2 class="article__question__title">
+          <h2 class="article__question__title first__question__title">
             Почему сосредоточиться так сложно
           </h2>
           <article class="article__content">
@@ -93,7 +93,7 @@
           <h2 class="article__question__title">
             Что снижает концентрацию внимания?
           </h2>
-          <article="article__content">
+          <article class="article__content first__medium__card">
             <h3 class="article__title title-decor">Многозадачность</h3>
             <p class="article__description">
               Как концентрация может снижаться из-за… концентрации? Любая
@@ -103,8 +103,8 @@
               собранными всё время — невозможно. Концентрация — мышца, и она
               может не выдержать, если не давать ей отдохнуть.
             </p>
-          </article=>
-          <article class="article__content">
+          </article>
+          <article class="article__content second__medium__card">
             <h3 class="article__title title-decor">Еда</h3>
             <p class="article__description">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
@@ -115,7 +115,7 @@
               хотим ещё больше быстрых углеводов.
             </p>
           </article>
-          <article class="article__content">
+          <article class="article__content third__medium__card">
             <h3 class="article__title title-decor">Гаджеты</h3>
             <p class="article__description">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
@@ -129,7 +129,7 @@
           </article>
         </section>
         <section class="main__article__card">
-          <h2 class="article__question__title">
+          <h2 class="article__question__title third__article__question__title">
             Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
             секунд)
           </h2>
