--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     </main>
     <footer class="footer">
       <div class="footer__text">
-        <h2 class="main__title">focus</h2>
+        <h2 class="main__title footer__title">focus</h2>
       </div>
     </footer>
   </div>
