--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="footer__text">
+      <!-- <div class="footer__text"> -->
         <h2 class="main__title footer__title">focus</h2>
-      </div>
+      <!-- </div> -->
     </footer>
   </div>
   </body>
