--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body class="page">
     <div class="page__content">
-    <header class="header">
+    <header class="header decorated__corner">
       <div class="rec__element">REC</div>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
@@ -233,7 +233,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer decorated__corner">
       <!-- <div class="footer__text"> -->
         <h2 class="main__title footer__title">focus</h2>
       <!-- </div> -->
