--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <main>
       <section class="main__section">
         <section class="main__article__card">
-          <h2 class="article__question__title first__question__title">
+          <h2 class="article__question__title focus__question__title">
             Почему сосредоточиться так сложно
           </h2>
           <article class="article__content">
@@ -93,7 +93,7 @@
           <h2 class="article__question__title">
             Что снижает концентрацию внимания?
           </h2>
-          <article class="article__content first__medium__card">
+          <article class="article__content">
             <h3 class="article__title title-decor">Многозадачность</h3>
             <p class="article__description">
               Как концентрация может снижаться из-за… концентрации? Любая
@@ -104,7 +104,7 @@
               может не выдержать, если не давать ей отдохнуть.
             </p>
           </article>
-          <article class="article__content second__medium__card">
+          <article class="article__content">
             <h3 class="article__title title-decor">Еда</h3>
             <p class="article__description">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
@@ -115,7 +115,7 @@
               хотим ещё больше быстрых углеводов.
             </p>
           </article>
-          <article class="article__content third__medium__card">
+          <article class="article__content">
             <h3 class="article__title title-decor">Гаджеты</h3>
             <p class="article__description">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
@@ -129,7 +129,7 @@
           </article>
         </section>
         <section class="main__article__card">
-          <h2 class="article__question__title third__article__question__title">
+          <h2 class="article__question__title advise__article__question__title">
             Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
             секунд)
           </h2>
@@ -153,7 +153,7 @@
             </p>
           </article>
           <article class="article__content">
-            <h3 class="article__advise__title title-decor">Включите музыку</h3>
+            <h4 class="article__advise__title title-decor">Включите музыку</h4>
             <p class="article__description">
               Но не любую, и не любимую. Любимая может быть связана с сильными
               положительными эмоциями, которые тоже очень сильно отвлекают.
@@ -162,7 +162,7 @@
             </p>
           </article>
           <article class="article__content">
-            <h3 class="article__advise__title title-decor">Прогуляйтесь</h3>
+            <h4 class="article__advise__title title-decor">Прогуляйтесь</h4>
             <p class="article__description">
               Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
               <a class="accent__word" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328">показал</a>, что созерцание
@@ -174,7 +174,7 @@
             </p>
           </article>
           <article class="article__content">
-            <h3 class="article__advise__title title-decor">Хорошо ешьте</h3>
+            <h4 class="article__advise__title title-decor">Хорошо ешьте</h4>
             <p class="article__description">
               Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
               которые препятствуют резким скачкам сахара в крови. Например, с
@@ -183,7 +183,7 @@
             </p>
           </article>
           <article class="article__content">
-            <h3 class="article__advise__title title-decor">Читайте</h3>
+            <h4 class="article__advise__title title-decor">Читайте</h4>
             <p class="article__description">
               Настоящие бумажные книги. Это правда помогает с концентрацией:
               чтобы прочитать пост в соцсети, достаточно нескольких минут или
