--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </nav>
       <div class="main__title__section">
         <div class="main__title__text">
-          <h1 class="main__title">no focus</h1>
+          <h1 class="main__title header__title">no focus</h1>
           <p class="main__description title-decor">
             Что делать, когда не можешь делать ничего <br />Или почему нам так
             сложно сконцентрироваться, особенно когда очень надо
